AMBARI-21380. Force to use JDK 8 for Ambari Server maven build (oleewere)